--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 <body>
     <h1>This is a git test</h1>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Impedit quidem eius debitis eos aliquid quos cumque vero qui mollitia iusto omnis repellendus nam, similique vitae! Suscipit mollitia sint nihil incidunt.</p>
+    <button>submit</button>
 </body>
 </html>
